--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 <html>
+<head>
+  <!-- remove maximum-scale for mobile web -->
+    <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no,minimal-ui">
+</head>
 <body>
 <select name="to_station" id="to_station">
 <option selected="" value="004"></option>
